# sni-watcher

./: Cargo.toml  LICENSE  README.md  deny.toml
.copr/: Makefile
.github/workflows/: ci.yml  package.yml  release.yml  security.yml
contrib/: sni-watcher.service  waybar.service.d-sni-watcher.conf
packaging/: PKGBUILD  build-srpm.sh  sni-watcher.install  sni-watcher.rpmlintrc  sni-watcher.spec
src/: main.rs
